CSS + HTML/frontPage.css
body {
    background-color: rgb(233, 224, 224);
    font-family: "Arial, sans-serif";
}

#d1 {
    position: absolute;
    top: 10%;
    left: 50%;
    transform: translate(-50%, -10%);
    border: 4px solid black;
    padding: 20px;
    width: 90%; 
    height: 400px;
    max-width: 750px; 
    border-radius: 10px;
    box-sizing: border-box;
    background-color: rgb(51, 133, 168);
}

#h1 {
    color: black;
    font-family: "Arial, sans-serif";
    font-size: 50 px;
}

footer {
    color: black;
    font-family: "Arial, sans-serif";
    font-size: 25px;
}

